--- a/src/components/Genres/style.css
+++ b/src/components/Genres/style.css
@@ -4,9 +4,9 @@
 }
 
 .categories {
-  margin-top: 20px;
-  width: 15px;
-  height: 15px;
+  margin-top: 10px;
+  width: 16px;
+  height: 16px;
 }
 
 .categorie-container {
