--- a/src/components/Holder/style.css
+++ b/src/components/Holder/style.css
@@ -1,13 +1,15 @@
 .card-container {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto;
   background-color: #543864;
-  grid-row-gap: 40px;
-  grid-column-gap: 40px;
+  grid-row-gap: 30px;
+  grid-column-gap: 30px;
   padding-right: 30px;
   padding-bottom: 100px;
   padding-top: 20px;
   padding-left: 30px;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-container {
@@ -20,8 +22,7 @@
 }
 
 .genres {
-  padding-left: 30px;
-  width: 100px;
+  margin-left: 50px;
 }
 
 .filter-button {
