--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -15,10 +15,10 @@
   overflow-x: scroll;
   overflow-y: hidden;
   width: 95vw;
-  height: 430px;
-  gap: 20px;
+  height: 330px;
+  gap: 18px;
   padding-top: 20px;
-  margin-left: 45px;
+  margin-left: 35px;
   margin-bottom: 20px;
 }
 
@@ -28,8 +28,8 @@
   overflow-x: scroll;
   overflow-y: hidden;
   width: 95vw;
-  height: 180px;
-  gap: 20px;
+  height: 160px;
+  gap: 18px;
   padding-top: 20px;
   margin-left: 55px;
   margin-bottom: 20px;
@@ -44,6 +44,7 @@
   text-align: center;
   font-weight: bold;
   font-size: 40px;
+  margin-top: 30px;
 }
 
 .main h3,
